--- a/nextjs-typescript-tailwind-template/package.json
+++ b/nextjs-typescript-tailwind-template/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.22",
     "autoprefixer": "^10.2.5",
     "next": "10.1.3",
+    "next-themes": "^0.0.14",
     "postcss": "^8.2.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
